update aa